--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
-  margin: 0;
+  width:500px;
+  margin:auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  line-height: 1.5;
+  padding-bottom: 200px;
 }
 
 code {
